; ModuleID = '/home/carl/AnghaBench/masscan/src/extr_proto-smb.c_convert_windows_time.c'
source_filename = "/home/carl/AnghaBench/masscan/src/extr_proto-smb.c_convert_windows_time.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TICKS_PER_SECOND = common dso_local global i64 0, align 8
@EPOCH_DIFFERENCE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64)* @convert_windows_time to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @convert_windows_time(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %4 = load i64, i64* %2, align 8
  %5 = load i64, i64* @TICKS_PER_SECOND, align 8
  %6 = sdiv i64 %4, %5
  store i64 %6, i64* %3, align 8
  %7 = load i64, i64* @EPOCH_DIFFERENCE, align 8
  %8 = load i64, i64* %3, align 8
  %9 = sub i64 %8, %7
  store i64 %9, i64* %3, align 8
  %10 = load i64, i64* %3, align 8
  %11 = trunc i64 %10 to i32
  ret i32 %11
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
